--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="REST-WS-Simple">
+    <wb-module deploy-name="RESTFUL-WS">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="REST-WS-Simple"/>
-        <property name="java-output-path" value="/REST-WS-Simple/build/classes"/>
+        <property name="java-output-path" value="/RESTFUL-WS/build/classes"/>
+        <property name="context-root" value="RESTFUL-WS"/>
     </wb-module>
 </project-modules>
