Directory Stucture completely overhauled to maven standard.  Security demo is included and can be accessed by making a post to:
http://localhost:8080/RESTFUL-WS/j_spring_security_check?j_username=user&j_password=userPass

Then you can test the cookie by making a get to:

http://localhost:8080/RESTFUL-WS/api/foos

-ISSUES
The jersey servlet seems to be inactive
Recieved a 500 error when "get" to the wrong URI

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="RESTFUL-WS">
+    <wb-module deploy-name="spring-security-rest">
+        <wb-resource deploy-path="/WEB-INF/web.xml" source-path="/src/main/webapp/WEB-INF/web.xml"/>
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-        <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="java-output-path" value="/RESTFUL-WS/build/classes"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
+        <property name="java-output-path" value="/spring-security-rest/target/classes"/>
         <property name="context-root" value="RESTFUL-WS"/>
     </wb-module>
 </project-modules>
