--- a/App/www/partials/user-creation.html
+++ b/App/www/partials/user-creation.html
@@ -3,6 +3,20 @@
 
     <form novalidate="novalidate" class="form-horizontal">
         <div class="control-group">
+            <label class="control-label" for="inputUsername">Username:</label>
+
+            <div class="controls">
+                <input type="text" id="inputUsername" ng-model="user.username" placeholder="Username"/>
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="inputPassword">Password:</label>
+
+            <div class="controls">
+                <input type="text" id="inputPassword" ng-model="user.password" placeholder="Password"/>
+            </div>
+        </div>
+        <div class="control-group">
             <label class="control-label" for="inputFirstName">First name:</label>
 
             <div class="controls">
