--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -6,6 +6,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <property name="java-output-path" value="/target/classes"/>
-        <property name="context-root" value="RESTFUL-WS"/>
+        <property name="context-root" value="services"/>
     </wb-module>
 </project-modules>
