--- a/App/www/partials/tabs.html
+++ b/App/www/partials/tabs.html
@@ -13,7 +13,7 @@
 
 
   <!-- Adopt Tab -->
-  <ion-tab title="Users" icon="icon ion-heart" href="#/tab/users">
+  <ion-tab title="Users" icon="icon ion-person-stalker" href="#/tab/users">
     <ion-nav-view name="tab-users"></ion-nav-view>
   </ion-tab>
 
