--- a/App/www/partials/tab-account.html
+++ b/App/www/partials/tab-account.html
@@ -1,5 +1,24 @@
 <ion-view title="Account">
-  <ion-content class="has-header padding">
-    <h1>Account</h1>
-  </ion-content>
+  <ion-content has-header="true" padding="true">
+<h3>Update User Details</h3>
+<div class="list">
+	<label class="item item-input item-stacked-label"> <span
+		class="input-label">First Name</span> <input type="text"
+		ng-model="user.firstName">
+	</label> <label class="item item-input item-stacked-label"> <span
+		class="input-label">Last Name</span> <input type="text"
+		ng-model="user.lastName">
+	</label> <label class="item item-input item-stacked-label"> <span
+		class="input-label">Email</span> <input type="text"
+		ng-model="user.email">
+	</label>
+</div>
+<div>
+	<button ng-click="cancel()" class="button button-block button-positive">
+		Cancel</button>
+
+	<button ng-click="updateUser()"
+		class="button button-block button-positive">Update User</button>
+</div>
+</ion-content>
 </ion-view>
