--- a/App/www/partials/user-detail.html
+++ b/App/www/partials/user-detail.html
@@ -4,7 +4,16 @@
   The FriendsCtrl pulls data from the Friends service (service.js)
   The Friends service returns an array of friend data
 -->
-<ion-view title="{{friend.name}}">
-  <ion-content has-header="true" padding="true">
-  </ion-content>
-</ion-view>
+<ion-view title="{{user.username}}">
+<ion-content has-header="true" padding="true">
+
+<div class="list">
+
+    <a class="item item-thumbnail-left" href="#">
+     <!--   <img src="cover.jpg"> -->
+      <h2>{{user.firstName}} {{user.lastName}}</h2> 
+      <p> {{user.email}}</p>     		
+    </a>    
+
+</div>
+</ion-content> </ion-view>
