--- a/App/www/partials/user-detail.html
+++ b/App/www/partials/user-detail.html
@@ -9,8 +9,8 @@
 
 <div class="list">
 
-    <a class="item item-thumbnail-left" href="#">
-     <!--   <img src="cover.jpg"> -->
+    <a class="item item-thumbnail-left" href="#">     
+      <img src="http://www.housuggest.org/images/testApp/users/Admin.png/" >
       <h2>{{user.firstName}} {{user.lastName}}</h2> 
       <p> {{user.email}}</p>     		
     </a>    
