--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <property name="java-output-path" value="/RESTFUL-WS-ACL/target/classes"/>
-        <property name="context-root" value="VolunteerApp"/>
+        <property name="context-root" value="RESTFUL-WS"/>
     </wb-module>
 </project-modules>
