Overwrote the project to bring it up to date and provided a sample implementation of a basic resource.
-A truncated version of the current VMA backend
-Includes require User Resource and a full implementation of ACLs 
-Added a SampleObject to exibhit how to implement a new resource
-Added the required mySQL table

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -4,7 +4,7 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <property name="java-output-path" value="/RESTFUL-WS-ACL/target/classes"/>
-        <property name="context-root" value="RESTFUL-WS"/>
+        <property name="java-output-path" value="/RESTFUL-WS-ACL/bin"/>
+        <property name="context-root" value="CoreAcl"/>
     </wb-module>
 </project-modules>
